# houseflip-rapha

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.streamlit/: config.toml  secrets.toml.example
app/: config.py  main.py  state.py
app/components/: listing_table.py  login.py  opportunity_chart.py  scraper_form.py
app/pages/: 01_scraping.py  02_analysis.py  03_favorites.py
src/houseflip/: __init__.py
src/houseflip/analysis/: __init__.py  price_deviation.py
src/houseflip/models/: __init__.py  analysis.py  listing.py  scrape_config.py
src/houseflip/scrapers/: __init__.py  base.py  chavesnamao.py  olx.py  quintoandar.py  vivareal.py  zapimoveis.py
src/houseflip/services/: __init__.py  analysis_service.py  scrape_service.py
src/houseflip/storage/: __init__.py  database.py  repository.py
src/houseflip/storage/migrations/: 001_initial.sql  002_analysis_view.sql  003_fix_neighborhood_stats_stddev.sql  004_add_is_favorite.sql
tests/test_analysis/: test_price_deviation.py
tests/test_scrapers/: test_base.py
